adding global nav

--- a/index.html
+++ b/index.html
@@ -16,23 +16,40 @@
 	
 	<div class="container">
 		
+		<!--HEADER-->
 		<header class="global-header">
 			<div class="grid-full mod-flex mod-space-between">
 				<a href = "#" class="global-header-logo">
 					PEASY
 					<i class="global-header-logo-icon fa fa-leaf"></i>
 				</a>
-				<div class="global-header-cart">
-					<button class="global-button global-header-cart-button">
-						<i class="fa fa-shopping-cart"></i>
-						&nbsp; Your Cart
-						<span class="global-header-cart-summary">
-							(2)
-						</span>
-					</button>
+				<nav class="global-header-links">
+					<a href="#" class=" global-link">How It Works</a>
+					<a href="#" class=" global-link">About Us</a>
+					<a href="#" class=" global-link">What's in Season</a>
+					<a href="#" class=" global-link">Our Farmers</a>
+				</nav>
+				<div class="global-header-login">
+					<a href="#" class="global-link"> Login / Signup </a>
 				</div>
 			</div>
-			</header>
+		</header>
+	
+		<!--BANNER-->
+		<div class="banner">
+			<div class="grid-100 mod-flex mod-flex-center">
+				banner
+			</div>
+		</div>
+
+		<!--INTRO-->
+
+		<!--HOW IT WORKS-->
+
+		<!--ABOUT-->
+
+		<!--IN SEASON-->
+
 		
 	</div> 
 	<!-- end app -->
