added sigup modal; todo: mobile styling

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<a href="coming-soon" class=" global-link global-header-link">Our Farmers</a>
 				</nav>
 				<div class="global-header-login">
-					<a href="#" class="global-link global-header-login-link"> Login / Signup </a>
+					<button class="global-button global-link button-signup"> Login / Signup </button>
 				</div>
 			</div>
 		</header>
@@ -131,7 +131,7 @@
 				</div>
 				
 				<div class="button-container">
-					<a href="sign-up" class="global-button mod-primary">Sign Up</a>
+					<button class="global-button mod-primary button-signup">Sign Up</button>
 				</div>
 			</div>
 		</section>
@@ -198,7 +198,7 @@
 				</div>
 				
 				<div class="button-container">
-					<a href="sign-up" class="global-button mod-primary">Sign Up</a>
+					<button class="global-button mod-primary button-signup">Sign Up</button>
 				</div>
 			</div>
 		</section>
