adding global header

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 					PEASY
 					<i class="global-header-logo-icon fa fa-leaf"></i>
 				</a>
+				
+				<i class="fa fa-bars mobile-visible"></i>
 				<nav class="global-header-links">
 					<a href="#how-it-works" class=" global-link global-header-link">How It Works</a>
 					<a href="#about-us" class=" global-link global-header-link">About Us</a>
