added mobile menu and tablet-sized styles; need to fix phone size

--- a/index.html
+++ b/index.html
@@ -85,15 +85,20 @@
 					<i class="global-header-logo-icon fa fa-leaf"></i>
 				</a>
 				
-				<i class="fa fa-bars mobile-visible"></i>
-				<nav class="global-header-links">
-					<a href="#how-it-works" class=" global-link global-header-link">How It Works</a>
-					<a href="#about-us" class=" global-link global-header-link">About Us</a>
-					<a href="#whats-in-season" class=" global-link global-header-link">What's in Season</a>
-					<a href="coming-soon" class=" global-link global-header-link">Our Farmers</a>
-				</nav>
-				<div class="global-header-login">
-					<button class="global-button global-link button-signup"> Login / Signup </button>
+				<div class="global-header-menu-items">
+					<span class="global-link mod-center-self fa fa-bars mobile-visible hamburger-menu"></span>
+
+					<div class="global-header-menu-items-list is-hidden">
+						<nav class="global-header-links">
+							<a href="#how-it-works" class="global-link global-header-link">How It Works</a>
+							<a href="#about-us" class=" global-link global-header-link">About Us</a>
+							<a href="#whats-in-season" class=" global-link global-header-link">What's in Season</a>
+							<a href="coming-soon" class=" global-link global-header-link">Our Farmers</a>
+						</nav>
+						<span class="global-header-login">
+							<button class="global-button global-link global-header-login-link button-signup"> Login / Signup </button>
+						</span>
+					</div>
 				</div>
 			</div>
 		</header>
