--- a/index.html
+++ b/index.html
@@ -121,17 +121,17 @@
 
 				<div class="info-boxes grid-75 mod-flex mod-space-between">
 					<div class="info-box">
-						<div class="info-box-img"></div>
+						<div class="info-box-img info-box-img1"></div>
 						<div class="info-box-title">Chef-cut veggies, delivered to your door.</div>
 						<div class="info-box-content">With Peasy, get pre-cut, organic and in-season vegetables delivered same-day or up to one week ahead of time.</div>
 					</div>					
 					<div class="info-box">
-						<div class="info-box-img"></div>
+						<div class="info-box-img info-box-img2"></div>
 						<div class="info-box-title">We do the prep work, you do you.</div>
 						<div class="info-box-content">Why spend hours at the cutting board? We’ll wash and cut vegetables so you can get creative in the kitchen without the hassle.</div>
 					</div>				
 					<div class="info-box">
-						<div class="info-box-img"></div>
+						<div class="info-box-img info-box-img3"></div>
 						<div class="info-box-title">Healthy eating doesn’t have to be a chore.</div>
 						<div class="info-box-content">We source our vegetables from local farms and compost stems and stalks. Let us do the dirty work. Healthy should be easy.</div>
 					</div>
@@ -154,11 +154,11 @@
 							<div class="how-box-title">Step 1</div>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro earum quas, nesciunt. Neque possimus minima sint reprehenderit praesentium eligendi, repellat reiciendis, deserunt quod pariatur ab, corporis dicta! Nulla, obcaecati, aut!
 						</div>
-						<div class="how-box-img"></div>
+						<div class="how-box-img how-box-img1"></div>
 					</div>
 
 					<div class="how-box mod-flex mod-space-between">
-						<div class="how-box-img"></div>
+						<div class="how-box-img how-box-img2"></div>
 						<div class="how-box-content">	
 							<div class="how-box-title">Step 2</div>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro earum quas, nesciunt. Neque possimus minima sint reprehenderit praesentium eligendi, repellat reiciendis, deserunt quod pariatur ab, corporis dicta! Nulla, obcaecati, aut!
@@ -170,7 +170,7 @@
 							<div class="how-box-title">Step 3</div>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro earum quas, nesciunt. Neque possimus minima sint reprehenderit praesentium eligendi, repellat reiciendis, deserunt quod pariatur ab, corporis dicta! Nulla, obcaecati, aut!
 						</div>
-						<div class="how-box-img"></div>
+						<div class="how-box-img how-box-img3"></div>
 					</div>
 		
 				</div>
