--- a/index.html
+++ b/index.html
@@ -148,26 +148,26 @@
 			<div class="grid-full mod-flex mod-flex-center mod-flex-column">
 				<div class="section-title">How It Works</div>
 
-				<div class="how-boxes grid-75 mod-flex mod-space-between mod-flex-column">
+				<div class="how-boxes grid-50 mod-flex mod-space-between mod-flex-column">
 					<div class="how-box mod-flex mod-space-between">
 						<div class="how-box-content">	
-							<div class="how-box-title">Step 1</div>
+							<div class="how-box-title">We Stock In-Season Vegetables from Local Farms</div>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro earum quas, nesciunt. Neque possimus minima sint reprehenderit praesentium eligendi, repellat reiciendis, deserunt quod pariatur ab, corporis dicta! Nulla, obcaecati, aut!
 						</div>
 						<div class="how-box-img how-box-img1"></div>
 					</div>
 
-					<div class="how-box mod-flex mod-space-between">
+					<div class="how-box how-box2 mod-flex mod-space-between">
 						<div class="how-box-img how-box-img2"></div>
-						<div class="how-box-content">	
-							<div class="how-box-title">Step 2</div>
+						<div class="how-box-content how-box-content2">	
+							<div class="how-box-title">Our Chefs Professionally Cut the Fresh Vegetables</div>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro earum quas, nesciunt. Neque possimus minima sint reprehenderit praesentium eligendi, repellat reiciendis, deserunt quod pariatur ab, corporis dicta! Nulla, obcaecati, aut!
 						</div>
 					</div>
 
 					<div class="how-box mod-flex mod-space-between">
 						<div class="how-box-content">	
-							<div class="how-box-title">Step 3</div>
+							<div class="how-box-title">You Prepare A Nutritious Meal With Ease</div>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro earum quas, nesciunt. Neque possimus minima sint reprehenderit praesentium eligendi, repellat reiciendis, deserunt quod pariatur ab, corporis dicta! Nulla, obcaecati, aut!
 						</div>
 						<div class="how-box-img how-box-img3"></div>
@@ -188,17 +188,17 @@
 
 				<div class="info-boxes grid-75 mod-flex mod-space-between">
 					<div class="info-box">
-						<div class="info-box-img"></div>
+						<div class="info-box-img info-box-img1"></div>
 						<div class="info-box-title">Veggies are for everyone.</div>
 						<div class="info-box-content">With Peasy, get pre-cut, organic and in-season vegetables delivered same-day or up to one week ahead of time.</div>
 					</div>					
 					<div class="info-box">
-						<div class="info-box-img"></div>
+						<div class="info-box-img info-box-img2"></div>
 						<div class="info-box-title">Peasy <span class="fa fa-heart"></span> Farmers</div>
 						<div class="info-box-content">Why spend hours in the kitchen? We’ll wash and cut vegetables so you can get creative in the kitchen without the hassle.</div>
 					</div>				
 					<div class="info-box">
-						<div class="info-box-img"></div>
+						<div class="info-box-img info-box-img3"></div>
 						<div class="info-box-title">Love is food. Love is community.</div>
 						<div class="info-box-content">We source our vegetables from local farms and compost stems and stalks. Let us do the dirty work. Healthy should be easy.</div>
 					</div>
