--- a/index.html
+++ b/index.html
@@ -221,22 +221,22 @@
 					
 					<div class="slider-box">
 						<div class="slider-box-title">Squash</div>
-						<div class="slider-box-img"></div>
+						<div class="slider-box-img slider-box-img1"></div>
 						<a href = "coming-soon" target = "blank" class="slider-box-link global-link mod-secondary">Learn More</a>
 					</div>				
 					<div class="slider-box">
-						<div class="slider-box-title">Rutabaga</div>
-						<div class="slider-box-img"></div>
+						<div class="slider-box-title">Turnip</div>
+						<div class="slider-box-img slider-box-img2"></div>
 						<a href = "coming-soon" target = "blank" class="slider-box-link global-link mod-secondary">Learn More</a>
 					</div>					
 					<div class="slider-box">
 						<div class="slider-box-title">Kohlrabi</div>
-						<div class="slider-box-img"></div>
+						<div class="slider-box-img slider-box-img3"></div>
 						<a href = "coming-soon" target = "blank" class="slider-box-link global-link mod-secondary">Learn More</a>
 					</div>					
 					<div class="slider-box">
 						<div class="slider-box-title">Kale</div>
-						<div class="slider-box-img"></div>
+						<div class="slider-box-img slider-box-img4"></div>
 						<a href = "coming-soon" target = "blank" class="slider-box-link global-link mod-secondary">Learn More</a>
 					</div>
 
